# ts-next

./: .env.example  .gitignore  .lintstagedrc.js  .npmrc  .prettierignore  AGENTS.md  ARCHITECTURE_FIX_SUMMARY.md  ARCHITECTURE_IMPROVEMENTS_SUMMARY.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  ARCHITECTURE_IMPROVEMENT_ROADMAP.md  AUTH_FEATURES_SUMMARY.md  BUSINESS_AUDIT_QUICK_SUMMARY_2025-12-02.md  CLAUDE.md  CLEANUP_SUMMARY_2025-12-01.md  CODE_CLEANUP_AND_OPTIMIZATION_PLAN_2025-12-02.md  CODE_REVIEW_EXECUTIVE_SUMMARY.md  CODE_REVIEW_QUICK_SUMMARY.md  CODE_REVIEW_WORK_SUMMARY.md  COMPREHENSIVE_BUSINESS_AUDIT_2025-12-02.md  COMPREHENSIVE_CODE_REVIEW_REPORT_2025-12-02.md  COMPREHENSIVE_PRODUCT_ARCHITECTURE_REVIEW.md  COMPREHENSIVE_TEST_REPORT.md  CONSISTENCY_VERIFICATION_SUMMARY.txt  CONSOLIDATION_REPORT.md  DATABASE_DESIGN.md  DATABASE_INITIALIZATION_IMPROVEMENT.md  DOCUMENTATION_CONSISTENCY_ANALYSIS.md  Dockerfile  Dockerfile.base  E2E_TEST_ANALYSIS_AND_FIXES.md  E2E_TEST_PRODUCTION_PLAN.md  EXECUTION_COMPLETION_2025-12-02.md  EXECUTION_SUMMARY.md  EXECUTIVE_SUMMARY_AND_ACTION_PLAN.md  EXPERT_CODE_REVIEW_SUMMARY.md  FINAL_INTEGRATION_REPORT.md  FINAL_TEST_REPORT.md  FRONTEND_IMPLEMENTATION_COMPREHENSIVE_REVIEW.md  INTEGRATION_COMPLETION_REPORT.md  INTEGRATION_COMPLETION_SESSION_9.md  (+96 more)
.husky/: commit-msg  (+1 more)
apps/kline-service/wasm-cal/: Cargo.toml  MIGRATION_GUIDE.md  RUST_CODE_REVIEW_REPORT.md  build.sh  design.md  performance.d.ts  prd.md
apps/kline-service/wasm-cal/.cargo/: config.toml
apps/kline-service/wasm-cal/docs/: architecture-optimization-proposal.md
apps/kline-service/wasm-cal/src/: kline_generated.rs  kline_process.rs  lib.rs
apps/kline-service/wasm-cal/tests/: cursor_style_tests.rs  strategy_visitor_tests.rs  wheel_event_tests.rs
apps/oauth-service-rust/: .dockerignore  .env.example  ARCHITECTURE_DEEP_ANALYSIS.md  ARCHITECTURE_EXECUTIVE_SUMMARY.md  CHANGELOG.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  DOCKER_DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  E2E_TEST_IMPLEMENTATION_STATUS.md  E2E_TEST_STRATEGY.md  IMPLEMENTATION_GUIDE.md  LICENSE  MIGRATION_PROGRESS.md  NAPI_BUILD_INVESTIGATION.md  OPTIMIZATION_COMPLETED.md  OPTIMIZATION_PLAN.md  PHASE_2_OPTIMIZATION_COMPLETED.md  PHASE_3_OPTIMIZATION_COMPLETED.md  PRODUCTION_READINESS_SUMMARY.md  QUICK_REFERENCE.md  README.md  RUST_BEST_PRACTICES_REVIEW.md  TDD_EVALUATION_REPORT.md  index.d.ts  package.json  setup-phase1.sh  tailwind.config.js
apps/oauth-service-rust/crates/oauth-core/: Cargo.toml
apps/oauth-service-rust/crates/oauth-models/: Cargo.toml
apps/oauth-service-rust/crates/oauth-sdk-napi/: Cargo.toml
apps/oauth-service-rust/crates/oauth-service/: Cargo.toml
apps/oauth-service-rust/examples/: verify_password_hash.rs
apps/oauth-service-rust/migrations/: 001_initial_schema.sql  001_initial_schema_fixed.sql  002_seed_data.sql  003_init_admin_portal_client.sql  004_clean_initialization.sql  005_add_oauth_consent_permission.sql
apps/oauth-service-rust/npm/: Cargo.toml  build.rs  index.d.ts  index.js  oauth-service-napi.node  package.json  src
apps/oauth-service-rust/oauth-core/: Cargo.toml
apps/oauth-service-rust/oauth-sdk-napi/src/: napi_binding.rs
apps/oauth-service-rust/src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs  templates.rs
apps/oauth-service-rust/src/cache/: mod.rs  permission_cache.rs
apps/oauth-service-rust/src/middleware/: auth.rs  login_rate_limit.rs  mod.rs  permission.rs  rate_limit.rs
apps/oauth-service-rust/src/models/: mod.rs  refresh_token.rs  role.rs  user.rs
apps/oauth-service-rust/src/napi/: config.rs  error.rs  http_client.rs  mod.rs
apps/oauth-service-rust/src/routes/: audit_logs.rs  consent.rs  mod.rs  oauth.rs  permissions.rs  templates.rs  users.rs
apps/oauth-service-rust/src/services/: audit_log_service.rs  auth_code_service.rs  client_service.rs  mod.rs  rbac_service.rs  role_service.rs  token_service.rs  user_service.rs
apps/oauth-service-rust/src/utils/: crypto.rs  jwt.rs  mod.rs  pkce.rs  scopes.rs  validation.rs
apps/oauth-service-rust/static/styles/: tailwind.css
apps/oauth-service-rust/templates/: consent.html  error.html  layout.html  login.html  success.html
apps/oauth-service-rust/tests/: api_integration_tests.rs  audit_log_tests.rs  comprehensive_service_tests.rs  e2e_critical_issues.rs  e2e_oauth_flows.rs  e2e_rbac.rs  e2e_security.rs  endpoint_security_tests.rs  enhanced_security_and_audit_tests.rs  http_integration_tests.rs  napi_http_client.rs  napi_modules.rs  oauth_2_1_compliance_tests.rs  oauth_complete_flow_tests.rs  oauth_flow_tests.rs  permission_integration_tests.rs  pkce_token_tests.rs  rbac_permission_tests.rs  security_headers_tests.rs
apps/oauth-service-rust/tests/e2e/: fixtures.rs  mod.rs  oauth_client.rs  pkce.rs  test_server.rs
apps/pingora-proxy/: Cargo.toml  README.md  package.json
apps/pingora-proxy/benches/: path_matching.rs
apps/pingora-proxy/certs/: server.crt  server.key
apps/pingora-proxy/config/: default.yaml
apps/pingora-proxy/monitoring/: README.md
apps/pingora-proxy/src/: config_watcher.rs  error.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  tls.rs
apps/pingora-proxy/src/config/: mod.rs
apps/pingora-proxy/src/health/: mod.rs
apps/pingora-proxy/src/metrics/: collector.rs  golden_signals.rs  mod.rs
apps/pingora-proxy/src/proxy/: jwt.rs  mod.rs  routing.rs  service.rs
apps/pingora-proxy/src/security/: jwt.rs  mod.rs
apps/pingora-proxy/tests/: pingora_proxy_tests.rs
apps/zmq-log-server/: CLAUDE.md  Cargo.toml  OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  REFACTOR_REPORT.md  build.sh  test-logger.js  test-runner.sh
apps/zmq-log-server/benches/: performance.rs
apps/zmq-log-server/config/: config.toml  development.yaml  production.yaml
apps/zmq-log-server/src/: error.rs  lib.rs  main.rs  memory.rs  protocol.rs
apps/zmq-log-server/src/config/: config.rs  loader.rs  mod.rs
apps/zmq-log-server/src/processor/: manager.rs  mod.rs  types.rs
apps/zmq-log-server/tests/: error_handling.rs  integration.rs  optimization.rs  performance.rs
(+1933 files in other folders)
