[package]
name = "oauth-service-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
base64 = "0.21"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "9"
lazy_static = "1.4"
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "mysql", "chrono", "uuid", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower_governor = { version = "0.8", features = ["axum"] }
governor = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# ===== Web UI 依赖 =====
askama = "0.12"
askama_axum = "0.4"
html-escape = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
dotenv-parser = "0.1.3"
url = "2.5.7"
urlencoding = "2.1"
futures = "0.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
serial_test = "3.0"
tokio-test = "0.4"
