[workspace]
members = [
    "crates/oauth-models",
    "crates/oauth-core",
    "crates/oauth-service",
    "crates/oauth-sdk-napi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OAuth Service Team"]

[workspace.dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tower_governor = { version = "0.8", features = ["axum"] }
governor = "0.5"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "mysql", "chrono", "uuid", "json"] }

# Cryptography & Security
argon2 = "0.5"
bcrypt = "0.15"
jsonwebtoken = "9"
sha2 = "0.10"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
base64 = "0.21"
url = "2.5.7"
urlencoding = "2.1"
futures = "0.3"
lazy_static = "1.4"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Template engine
askama = "0.12"
askama_axum = "0.4"
html-escape = "0.2"

# Configuration
dotenvy = "0.15"
dotenv-parser = "0.1.3"
time = "0.3"

# NAPI - Native bindings
napi = { version = "2.16", features = ["async", "serde-json"] }
napi-derive = "2.16"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

[workspace.lints.clippy]
all = "warn"
nursery = "warn"
