[package]
name = "pingora-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { version = "0.5.0", features = ["lb", "proxy"] }
async-trait = "0.1.78"
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
lru = "0.12"
tokio = { version = "1", features = ["sync"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = { version = "0.14", features = ["yaml"] }
env_logger = "0.11"
log = "0.4"
once_cell = "1.19"
parking_lot = "0.12"
prometheus = { version = "0.13", features = ["process"] }
anyhow = "1.0"

