[package]
name = "pingora-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pingora核心依赖
pingora = { version = "0.5.0", features = ["proxy", "lb"] }

# 异步运行时
tokio = { version = "1.46.1", features = ["full"] }
async-trait = "0.1"

# 配置和序列化
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# 日志
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# 命令行
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# TLS/SSL 支持
rustls = { version = "0.23", features = ["std"] }
rustls-pemfile = "2.0"
tokio-rustls = "0.26"

# 监控 (Prometheus)
prometheus = "0.13"
lazy_static = "1.4"

# 速率限制
governor = "0.10"

# 配置热重载
notify = { version = "6.1", features = ["macos_fsevent"] }

[dev-dependencies]
tokio-test = "0.4"