[package]
name = "zmq-log-server"
version = "0.1.0"
edition = "2021"
authors = ["ZMQ Log Server Team"]
description = "High-performance ZMQ-based logging service"
license = "MIT"
repository = "https://github.com/your-org/zmq-log-server"
readme = "README.md"

[lib]
name = "zmq_log_server"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "zmq-log-server"
path = "src/main.rs"


[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"

# ZMQ
zmq = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"

# Configuration
config = "0.15.14"
clap = { version = "4.5", features = ["derive"] }
toml = "0.9.5"

# Storage and file operations
tokio-fs = "0.1"
flate2 = "1.0"
zstd = "0.13"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and date
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
gethostname = "1.0.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"

# Utilities
bytes = "1.9"
futures = "0.3"
crossbeam = "0.8"
parking_lot = "0.12"
once_cell = "1.20"
dashmap = "6.1"
rand = "0.8"


[dev-dependencies]
criterion = { version = "0.5", features = ["tokio"] }
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3.14"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 1

# [[bench]]
# name = "performance"
# harness = false
