[workspace]

[package]
name = "oauth-sdk-napi"
version = "0.1.0"
edition = "2021"
authors = ["OAuth Service Team"]

[package.metadata.napi]
name = "oauth-service-napi"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
oauth-models = { path = "../crates/oauth-models" }
oauth-core = { path = "../crates/oauth-core" }
napi = { version = "2.16", features = ["async", "serde-json"] }
napi-derive = "2.16"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
napi-build = "2.1"
