[package]
name = "oauth-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[package.metadata.askama]
in_dir = "templates"

[lib]
name = "oauth_core"
path = "src/lib.rs"

[dependencies]
# Local crates
oauth-models = { path = "../oauth-models" }

anyhow = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower_governor = { workspace = true }
governor = { workspace = true }
tower-http = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
html-escape = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dotenv-parser = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
serial_test = "3.0"
tokio-test = "0.4"
