[package]
name = "oauth-service"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "oauth-service"
path = "src/main.rs"

[lib]
name = "oauth_service"
path = "src/lib.rs"

[dependencies]
# Local crates
oauth-models = { path = "../oauth-models" }
oauth-core = { path = "../oauth-core" }

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
governor = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Cryptography & Security
argon2 = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Template engine
askama = { workspace = true }
askama_axum = { workspace = true }
html-escape = { workspace = true }

# Configuration
dotenvy = { workspace = true }
dotenv-parser = { workspace = true }
time = { workspace = true }

# HTTP client
reqwest = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
serial_test = "3.0"
tokio-test = "0.4"
